# TextBasedCustomizableAutoGrader

./: .gitignore  README.md
AutoGraderFramework/: .~lock.results-test7.xlsx#  pyproject.toml
AutoGraderFramework/autograder/: readme.md
AutoGraderFramework/autograder/scripts/: ExcelResultWriter.py  Logger.py  ProgressLogger.py  ResultWriter.py  ShellScriptTestRunner.py  SubmissionManager.py
AutoGraderFramework/autograder/scripts/data/: DictMixin.py  FolderStructure.py  ResultData.py
AutoGraderFramework/autograder/scripts/monitoring/: LiveMonitor.py
SampleGraderScript/: main.py
autograder-core/: prerequisite.sh  pyproject.toml
autograder-core/logs/: gradedLogs.json
autograder-core/src/autograder/: cli.py
autograder-core/src/autograder/data/: CurrentOperationState.py  DictMixin.py  FolderStructure.py  GradingContext.py  GradingSummary.py  ResultData.py  StepLatency.py
autograder-core/src/autograder/engine/: Grader.py  PipelineStep.py  SubmissionManager.py
autograder-core/src/autograder/logging/: Logger.py  ProgressLogger.py
autograder-core/src/autograder/monitoring/: DictTableBuilder.py  LiveMonitor.py  TableBuilder.py
autograder-core/src/autograder/result_writer/: ExcelResultWriter.py  ResultWriter.py
autograder-core/src/autograder/script_runner/: CleanupRunner.py  PythonTestRunner.py  ShellScriptTestRunner.py  TestRunner.py
autograder-core/src/autograder/steps/: BuildStep.py  CleanupStep.py  CopyDefaultFilesStep.py  ExtractSubmissionStep.py  LateSubmissionStep.py  ParseStudentInfoStep.py  RunTestsStep.py  StructureValidationStep.py
(+53 files in other folders)
